objects/TM2StopGap__c.object
<CustomObject>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpportunityId</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TM2StopGaps</relationshipLabel>
        <relationshipName>TM2StopGaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OptyShareIds__c</fullName>
        <description>Stores all the ids for inserted OpportunityShare records</description>
        <label>OptyShareIds</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TM2StopGaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isOptySharecompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isOptySharecompleted</label>
        <type>Checkbox</type>
    </fields>
    <label>TM2StopGap</label>
    <nameField>
        <displayFormat>TM2-{0000}</displayFormat>
        <label>TM2StopGap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TM2StopGaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>